# hd2helper

./: Cargo.toml  README.md  flake.nix
.github/workflows/: windows-build.yml
src/: db.rs  gui_templates.rs  main.rs  style.css
