[package]
name = "hd2helper"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-features=+crt-static"]

[dependencies.gtk]
package = "gtk4"
version = "0.8" # Tested with 0.8.1, but should be fine
features = ["v4_12"]

[dependencies.adw]
package = "libadwaita"
version = "0.6"
features = ["v1_4"]

[dependencies]
rand = "0.8"
rand_derive2 = "0.1"

strum = "0.26"
strum_macros = "0.26"

[profile.dev]
opt-level = 2
lto = "thin"
incremental = true

[profile.release]
opt-level = 3
lto = "thin"
incremental = true
strip = true

